<resources>
    <string name="app_name">RestaurantApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="you_have_to_log_in_first">"You have to log in first"</string>
    <string name="user">User</string>
    <string name="jeste_zalogowany_jako">Jesteś zalogowany jako</string>
    <string name="zmien_haslo">Zmień hasło</string>
    <string name="zmien_numer_telefonu">Zmień numer telefonu</string>
    <string name="wyloguj_sie">Wyloguj się</string>
    <string-array name="category">
        <item>Beef</item>
        <item>Chicken</item>
        <item>Dessert</item>
        <item>Lamb</item>
        <item>Miscellaneous</item>
        <item>Pasta</item>
        <item>Pork</item>
        <item>Seafood</item>
        <item>Side</item>
        <item>Starter</item>
        <item>Vegan</item>
        <item>Vegetarian</item>
    </string-array>

</resources>