<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SettingsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jeste_zalogowany_jako"
            android:textSize="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="@dimen/_30sdp"
            android:textColor="@color/accent"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wyloguj_sie"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/deleteAccountBtn"
            />
        <Button
            android:id="@+id/deleteAccountBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Usuń konto"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            app:layout_constraintStart_toEndOf="@id/logoutBtn"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <LinearLayout
            android:id="@+id/changePasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:orientation="vertical"
            android:background="@drawable/layout_bg"
            app:layout_constraintTop_toBottomOf="@id/logoutBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/changePasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zmien_haslo"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <EditText
                android:id="@+id/oldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Stare hasło"
                android:inputType="textPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/changePasswordText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nowe hasło"
                android:inputType="textPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/changePasswordText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <EditText
                android:id="@+id/repeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Powtórz nowe hasło"
                android:inputType="textPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/changePasswordText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <Button
                android:id="@+id/changePasswordBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zmień hasło"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/white"
                android:backgroundTint="@color/my_black"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/repeatPassword"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/changePhoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:orientation="vertical"
            android:background="@drawable/layout_bg"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/changePasswordLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/changePhoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zmien_numer_telefonu"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/newPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nowy numer telefonu"
                android:inputType="number"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/changePhoneText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/changePhoneBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zmień numer telefonu"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/white"
                android:backgroundTint="@color/my_black"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/repeatPassword"
                android:layout_gravity="center"
                />
        </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/loginLayout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:visibility="gone">
       <TextView
           android:id="@+id/logintext"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Musisz sie zalogować"
           android:textSize="@dimen/_25sdp"
           android:textColor="@color/grey"
           android:layout_marginBottom="@dimen/_60sdp"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"/>
       <Button
           android:id="@+id/loginBtn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Zaloguj się"
           android:textSize="@dimen/_20sdp"
           android:textColor="@color/white"
           android:backgroundTint="@color/my_black"
           android:layout_marginTop="@dimen/_10sdp"
           app:layout_constraintTop_toBottomOf="@id/logintext"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"/>

   </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>